@@ -2,8 +2,8 @@
 /**
  * Smarty plugin
  * @package Smarty
- * @subpackage plugins
- */
+ * @subpackage PluginsModifier
+*/
 
 
 /**
